# Silence

./: .gitignore  README.md  ble_probe.py  ble_stream.py  notes.txt  serial_probe.py
.claude/commands/: amnesia.md
journal/: 2026-04-19-ml.md  2026-04-19.md  2026-04-21.md  2026-04-22.md  2026-05-02.md  2026-05-04.md  links.md
ml_backend/: .gitignore  README.md  pyproject.toml
ml_backend/scripts/: dataset_stats.py  download_gaddy.py  inspect_signal.py  smoke_test.py  train_baseline.py
ml_backend/silence_ml/: eval.py  train.py
ml_backend/silence_ml/data/: __init__.py  base.py  gaddy.py  openbci.py
ml_backend/silence_ml/models/: __init__.py  cnn.py
ml_backend/silence_ml/preprocess/: __init__.py  epoch.py  filters.py
ml_backend/vocab/: gaddy_closed_top20.txt  mvp_20words.txt  test5.txt
recorder/: DATA_COLLECTION.md  README.md  app.py  board.py  session.py
recorder/static/: app.js  style.css
recorder/templates/: record.html
scripts/: bipolar_filtered.py  bipolar_test.py  bipolar_viz.py  ble_scan.py  ch_selftest.py  cyton_connect.py  dump_registers.py  plot_session.py  quick_classify.py  serial_probe.py  signal_check.py  signal_viz.py  test_board.py
